--- a/data/default.yaml
+++ b/data/default.yaml
@@ -1,45 +1,45 @@
 role_oradb::installdb_hash:
-  112010_Linux-x86-64:
+  11204_Linux-x86-64:
     version: '11.2.0.4'
     file: 'linux.x64_11gR2_database'
-    databaseType: 'SE' #default SE
-    oracleBase: '/oracle'
-    oracleHome: '/oracle/product/11.2/db'
-    createUser: true #default true
+    database_ype: 'SE' #default SE
+    oracle_base: '/oracle'
+    oracle_home: '/oracle/product/11.2/db'
+    create_user: true #default true
     user: 'oracle' #default 'oracle'
-    userBaseDir: '/home' #default '/home'
+    user_base_dir: '/home' #default '/home'
     group: 'dba' #default 'dba'
-    downloadDir: '/install' #default '/install'
-    zipExtract: false
-    puppetDownloadMntPoint: '/zipfiles'
-    remoteFile: false
+    download_dir: '/install' #default '/install'
+    zip_extract: false
+    puppet_download_mnt_point: '/zipfiles'
+    remote_file: false
 
 role_oradb::net_hash:
   listener:
-    oracleHome: '/oracle/product/11.2/db'
+    oracle_home: '/oracle/product/11.2/db'
     version: '11.2' 
     user: 'oracle' #default 'oracle'
     group: 'dba' #default 'dba'
-    downloadDir: '/install' #default '/install'
+    download_dir: '/install' #default '/install'
 
 role_oradb::database_hash:
   orcl:
-    oracleBase: '/oracle'
-    oracleHome: '/oracle/product/11.2/db'
+    oracle_base: '/oracle'
+    oracle_home: '/oracle/product/11.2/db'
     user: 'oracle'
     group: 'dba'
-    downloadDir: '/install'
+    download_dir: '/install'
     action: 'create'
-    dbName: 'orcl'
-    dbDomain: 'oracle.com'
-    sysPassword: 'Welcome01'
-    systemPassword: 'Welcome01'
-    dataFileDestination: '/oracle/oradata'
-    recoveryAreaDestination: '/oracle/flash_recovery_area'
-    characterSet: 'AL32UTF8'
-    nationalCharacterSet: 'UTF8'
-    initParams: 'open_cursors=1000,processes=600,job_queue_processes=4,compatible=11.2.0.0.0'
-    sampleSchema: 'TRUE'
-    memoryPercentage: '40'
-    memoryTotal: '800'
-    databaseType: 'MULTIPURPOSE'
+    db_name: 'orcl'
+    db_domain: 'oracle.com'
+    sys_password: 'Welcome01'
+    system_password: 'Welcome01'
+    dataFile_destination: '/oracle/oradata'
+    recovery_areaDestination: '/oracle/flash_recovery_area'
+    character_set: 'AL32UTF8'
+    national_characterSet: 'UTF8'
+    init_params: 'open_cursors=1000,processes=600,job_queue_processes=4,compatible=11.2.0.0.0'
+    sample_schema: 'TRUE'
+    memory_percentage: '40'
+    memory_total: '800'
+    database_type: 'MULTIPURPOSE'
