--- a/data/default.yaml
+++ b/data/default.yaml
@@ -2,10 +2,9 @@ role_oradb::installdb_hash:
   11204_Linux-x86-64:
     version: '11.2.0.4'
     file: 'linux.x64_11gR2_database'
-    database_ype: 'SE' #default SE
+    database_type: 'SE' #default SE
     oracle_base: '/oracle'
     oracle_home: '/oracle/product/11.2/db'
-    create_user: true #default true
     user: 'oracle' #default 'oracle'
     user_base_dir: '/home' #default '/home'
     group: 'dba' #default 'dba'
@@ -17,7 +16,7 @@ role_oradb::installdb_hash:
 role_oradb::net_hash:
   listener:
     oracle_home: '/oracle/product/11.2/db'
-    version: '11.2' 
+    version: '11.2'
     user: 'oracle' #default 'oracle'
     group: 'dba' #default 'dba'
     download_dir: '/install' #default '/install'
@@ -26,6 +25,7 @@ role_oradb::database_hash:
   orcl:
     oracle_base: '/oracle'
     oracle_home: '/oracle/product/11.2/db'
+    version: '11.2'
     user: 'oracle'
     group: 'dba'
     download_dir: '/install'
@@ -34,12 +34,13 @@ role_oradb::database_hash:
     db_domain: 'oracle.com'
     sys_password: 'Welcome01'
     system_password: 'Welcome01'
-    dataFile_destination: '/oracle/oradata'
-    recovery_areaDestination: '/oracle/flash_recovery_area'
+    data_file_destination: '/oracle/oradata'
+    recovery_area_destination: '/oracle/flash_recovery_area'
     character_set: 'AL32UTF8'
-    national_characterSet: 'UTF8'
+    nationalcharacter_set: 'UTF8'
     init_params: 'open_cursors=1000,processes=600,job_queue_processes=4,compatible=11.2.0.0.0'
     sample_schema: 'TRUE'
     memory_percentage: '40'
     memory_total: '800'
     database_type: 'MULTIPURPOSE'
+    em_configuration: 'NONE'
